Fix for issue #1 - now portlet does not update its height in case it's collapsed.  Added JavaDocs, made minor fixes.

--- a/addon/src/main/java/org/vaadin/addons/portallayout/portal/portallayout_styles.css
+++ b/addon/src/main/java/org/vaadin/addons/portallayout/portal/portallayout_styles.css
@@ -28,7 +28,7 @@
 	left: 0;
 	bottom: 0;
 	right: 0;
-	border: 1px solid black;
+	border: 2px solid black;
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
